# flask_accounts

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  schema.sql
app/: __init__.py  config.example.py  db.py
app/auth/: __init__.py  routes.py
app/auth/templates/auth/: login.html
app/db/: schema.sql
flask_accounts/: __init__.py  config.example.py  schema.sql
flask_accounts/auth/: __init__.py  cli.py  db_init.py  limiter.py  routes.py  service.py  session.py  validators.py
flask_accounts/auth/static/: auth.css
flask_accounts/auth/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
templates/: login.html  register.html  verify_email.html
