[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-accounts"
version = "0.1.3"
description = "Reusable Flask authentication module with registration, login, and email verification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Gabriel Leffew" }
]
dependencies = [
  "Flask>=3.0.0",
  "psycopg2-binary>=2.9.0"
]

classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
]

keywords = ["flask", "authentication", "auth", "login", "accounts", "web"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["flask_accounts*"]

[tool.setuptools.package-data]
flask_accounts = ["auth/templates/auth/*.html", "schema.sql"]